fix(css): Add spacing between list items to improve link touchability

--- a/public/css/base/typography.css
+++ b/public/css/base/typography.css
@@ -15,6 +15,10 @@ a {
 
 ul:not([class]) {
 	padding-inline-start: 1rem;
+
+	li:not(:last-child) {
+		margin-block-end: 0.25rem;
+	}
 }
 
 dl:not([class]) {
